Fix bug from passing parameters in wrong order for session attendance upload.